--- a/css/bulma-myscope.less
+++ b/css/bulma-myscope.less
@@ -1,3 +1,3 @@
 .myscope {                                                                          
-    @import (less) url('bulma-carousel.min.css');                                       
+    @import (less) url('bulma-all.min.css');                                       
 }
