--- a/css/bulma-myscope.css
+++ b/css/bulma-myscope.css
@@ -10391,13 +10391,13 @@ html .myscope.has-navbar-fixed-bottom {
 .myscope .hero.has-carousel .hero-carousel {
   position: absolute;
   top: 0;
-  left: 0.5rem;
+  left: 0;
   bottom: 0;
-  right: 0.5rem;
+  right: 0;
   height: auto;
   border: none;
   margin: auto;
-  padding: 0;
+  padding: 1rem;
   z-index: 0;
 }
 .myscope .hero.has-carousel .hero-carousel .slider {
@@ -10407,6 +10407,7 @@ html .myscope.has-navbar-fixed-bottom {
   height: 100%!important;
   max-height: 100%;
   z-index: 0;
+  padding: 1rem;
 }
 .myscope .hero.has-carousel .hero-carousel .slider .has-background {
   max-height: 100%;
@@ -10420,7 +10421,7 @@ html .myscope.has-navbar-fixed-bottom {
   width: 100%;
 }
 .myscope .hero.has-carousel .hero-body {
-  margin: 0 3rem;
+  margin: 1 3rem;
   z-index: 10;
 }
 @-webkit-keyframes spinAround {
