--- a/css/bulma-myscope.css
+++ b/css/bulma-myscope.css
@@ -10381,12 +10381,14 @@ html .myscope.has-navbar-fixed-bottom {
 }
 .myscope .hero.has-carousel {
   position: relative;
+  padding: 1rem;
 }
 .myscope .hero.has-carousel + .hero-body,
 .myscope .hero.has-carousel + .hero-footer,
 .myscope .hero.has-carousel + .hero-head {
   z-index: 10;
   overflow: hidden;
+  padding: 1rem;
 }
 .myscope .hero.has-carousel .hero-carousel {
   position: absolute;
@@ -10411,6 +10413,7 @@ html .myscope.has-navbar-fixed-bottom {
 }
 .myscope .hero.has-carousel .hero-carousel .slider .has-background {
   max-height: 100%;
+  padding: 1rem;
 }
 .myscope .hero.has-carousel .hero-carousel .slider .has-background .is-background {
   -o-object-fit: cover;
@@ -10419,10 +10422,12 @@ html .myscope.has-navbar-fixed-bottom {
   object-position: center center;
   height: 100%;
   width: 100%;
+  padding: 1rem;
 }
 .myscope .hero.has-carousel .hero-body {
   margin: 1 3rem;
   z-index: 10;
+  padding: 1rem;
 }
 @-webkit-keyframes spinAround {
   from {
