--- a/css/bulma-myscope.css
+++ b/css/bulma-myscope.css
@@ -10270,7 +10270,7 @@ html .myscope.has-navbar-fixed-bottom {
 }
 .myscope .slider-container .slider-item {
   flex: none;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 .myscope .slider-container .slider-item .image.is-covered img {
   -o-object-fit: cover;
@@ -10284,8 +10284,8 @@ html .myscope.has-navbar-fixed-bottom {
   height: 0;
   padding-bottom: 0;
   padding-top: 56.25%;
-  margin: 1rem;
-  padding: 1rem;
+  /* margin: 1rem;
+  padding: 1rem; */
   position: relative;
 }
 .myscope .slider-container .slider-item .video-container.is-1by1,
@@ -10384,14 +10384,12 @@ html .myscope.has-navbar-fixed-bottom {
 }
 .myscope .hero.has-carousel {
   position: relative;
-  padding: 1rem;
 }
 .myscope .hero.has-carousel + .hero-body,
 .myscope .hero.has-carousel + .hero-footer,
 .myscope .hero.has-carousel + .hero-head {
   z-index: 10;
   overflow: hidden;
-  padding: 1rem;
 }
 .myscope .hero.has-carousel .hero-carousel {
   position: absolute;
@@ -10402,7 +10400,6 @@ html .myscope.has-navbar-fixed-bottom {
   height: auto;
   border: none;
   margin: auto;
-  padding: 1rem;
   z-index: 0;
 }
 .myscope .hero.has-carousel .hero-carousel .slider {
@@ -10412,11 +10409,9 @@ html .myscope.has-navbar-fixed-bottom {
   height: 100%!important;
   max-height: 100%;
   z-index: 0;
-  padding: 1rem;
 }
 .myscope .hero.has-carousel .hero-carousel .slider .has-background {
   max-height: 100%;
-  padding: 1rem;
 }
 .myscope .hero.has-carousel .hero-carousel .slider .has-background .is-background {
   -o-object-fit: cover;
@@ -10428,9 +10423,8 @@ html .myscope.has-navbar-fixed-bottom {
   padding: 1rem;
 }
 .myscope .hero.has-carousel .hero-body {
-  margin: 1 3rem;
+  margin: 0 3rem;
   z-index: 10;
-  padding: 1rem;
 }
 @-webkit-keyframes spinAround {
   from {
