--- a/css/bulma-myscope.css
+++ b/css/bulma-myscope.css
@@ -10264,6 +10264,7 @@ html .myscope.has-navbar-fixed-bottom {
   transform: translate3d(0, 0, 0);
   min-height: 100%;
   padding: 1rem;
+  top: 0;
 }
 .myscope .slider-container.is-vertical {
   flex-direction: column;
@@ -10615,7 +10616,7 @@ html .myscope.has-navbar-fixed-bottom {
   width: 100%;
 }
 .myscope .hero.has-carousel .hero-body {
-  margin: 0 1rem;
+  margin: 0 3rem;
   z-index: 10;
 }
 @-webkit-keyframes spinAround {
