--- a/css/bulma-myscope.css
+++ b/css/bulma-myscope.css
@@ -10264,7 +10264,7 @@ html .myscope.has-navbar-fixed-bottom {
   transform: translate3d(0, 0, 0);
   min-height: 100%;
   padding: 1rem;
-  top: 0;
+  margin: 0 -1rem;
 }
 .myscope .slider-container.is-vertical {
   flex-direction: column;
