--- a/css/bulma-myscope.css
+++ b/css/bulma-myscope.css
@@ -10263,9 +10263,8 @@ html .myscope.has-navbar-fixed-bottom {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   min-height: 100%;
-  /* padding: 1rem;
-  margin: 0 -1rem; */
-  padding-left: 1rem;
+  padding: 1rem;
+  /* margin: 0 -1rem; */
 }
 .myscope .slider-container.is-vertical {
   flex-direction: column;
@@ -10273,7 +10272,6 @@ html .myscope.has-navbar-fixed-bottom {
 .myscope .slider-container .slider-item {
   flex: none;
   /* padding: 1rem; */
-  padding-left: 1rem;
 }
 .myscope .slider-container .slider-item .image.is-covered img {
   -o-object-fit: cover;
@@ -10289,7 +10287,6 @@ html .myscope.has-navbar-fixed-bottom {
   padding-top: 56.25%;
   /* margin: 1rem;
   padding: 1rem; */
-  padding-left: 1rem;
   position: relative;
 }
 .myscope .slider-container .slider-item .video-container.is-1by1,
