--- a/css/bulma-myscope.css
+++ b/css/bulma-myscope.css
@@ -10264,7 +10264,7 @@ html .myscope.has-navbar-fixed-bottom {
   transform: translate3d(0, 0, 0);
   min-height: 100%;
   padding: 1rem;
-  margin: 0;
+  /* margin: 0; */
   /* margin: 0 -1rem; */
 }
 .myscope .slider-container.is-vertical {
@@ -10272,7 +10272,7 @@ html .myscope.has-navbar-fixed-bottom {
 }
 .myscope .slider-container .slider-item {
   flex: none;
-  /* padding: 1rem; */
+  padding: 1rem;
 }
 .myscope .slider-container .slider-item .image.is-covered img {
   -o-object-fit: cover;
@@ -10286,8 +10286,8 @@ html .myscope.has-navbar-fixed-bottom {
   height: 0;
   padding-bottom: 0;
   padding-top: 56.25%;
-  /* margin: 1rem;
-  padding: 1rem; */
+  /* margin: 1rem; */
+  padding: 1rem;
   position: relative;
 }
 .myscope .slider-container .slider-item .video-container.is-1by1,
