--- a/css/bulma-myscope.css
+++ b/css/bulma-myscope.css
@@ -10263,7 +10263,8 @@ html .myscope.has-navbar-fixed-bottom {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   min-height: 100%;
-  padding: 1rem;
+  /* padding: 0.5rem; */
+  padding-left: 0.5rem;
   /* margin: 1rem; */
 }
 .myscope .slider-container.is-vertical {
@@ -10271,7 +10272,8 @@ html .myscope.has-navbar-fixed-bottom {
 }
 .myscope .slider-container .slider-item {
   flex: none;
-  padding: 1rem;
+  /* padding: 0.5rem; */
+  padding-left: 0.5rem;
   /* margin: 1rem; */
 }
 .myscope .slider-container .slider-item .image.is-covered img {
@@ -10286,7 +10288,8 @@ html .myscope.has-navbar-fixed-bottom {
   height: 0;
   padding-bottom: 0;
   padding-top: 56.25%;
-  padding: 1rem;
+  /* padding: 0.5rem; */
+  padding-left: 0.5rem;
   /* margin: 1rem; */
   position: relative;
 }
